<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mvchistv.proyectodetesis.RecuperarEmail">

    <EditText
        android:id="@+id/txtRecuperarEmail"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="133dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/rcpRecuperar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rcpRecuperar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginBottom="233dp"
        android:layout_marginEnd="136dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="51dp"
        android:text="@string/recuperar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRecuperarEmail" />

    <Button
        android:id="@+id/rcpVolver"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="288dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="221dp"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRecuperarEmail"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/rcpSalir"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="242dp"
        android:layout_marginTop="16dp"
        android:text="@string/salir"
        app:layout_constraintBottom_toTopOf="@+id/txtRecuperarEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rcrText"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="54dp"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="32dp"
        android:text="@string/escribe_tu_email_para_restablecer_tu_contrase_a"
        app:layout_constraintBottom_toTopOf="@+id/rcpRecuperar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
